K8sYaml/projects/defaultproject/workloads/artifacts/demo1/demo1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    rep-container: 7dkgjkx-vijay-cont
    rep-organization: 7w2lnkp
    rep-partner: rx28oml
    rep-version: rx28oml
    rep-workload: 7dkgjkx
  name: vijay-cont
  namespace: test-ns
spec:
  ports:
  - name: port-80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    rep-app: vijay-cont
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    rafay.dev/registry-4qkolkn: public-docker-hub-registry
  labels:
    rep-app: vijay-cont
    rep-organization: 7w2lnkp
    rep-partner: rx28oml
    rep-workload: 7dkgjkx
  name: vijay-cont
  namespace: test-ns
spec:
  minReadySeconds: 10
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      rep-app: vijay-cont
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: {}
      labels:
        rep-app: vijay-cont
        rep-organization: 7w2lnkp
        rep-partner: rx28oml
        rep-workload: 7dkgjkx
    spec:
      containers:
      - args: []
        command: []
        env: []
        envFrom: []
        image: index.docker.io/bitnami/solr:8.11.1-debian-10-r70
        imagePullPolicy: IfNotPresent
        name: vijay-cont
        ports:
        - containerPort: 80
          name: port-80-tcp
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 8192Mi
          requests:
            cpu: 1900m
            memory: 7782Mi
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      tolerations: []

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/configuration-snippet: set $workload_name "demo1";set
      $workloadId "7dkgjkx";set $orgId "7w2lnkp";set $partnerId "rx28oml";
    rafay.dev/cname: vijaytest-simha-dev-rafay-edge-net.Team Rafay
    rafay.dev/kubeVersionConstraint: '>=1.19.0'
  name: vijaytest-qasimplified-com
  namespace: test-ns
spec:
  rules:
  - host: vijaytest.simha.dev.rafay-edge.net
    http:
      paths:
      - backend:
          service:
            name: vijay-cont
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - vijaytest.simha.dev.rafay-edge.net
    secretName: 7dkgjkx-vijaytest--1411753543-ingress

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/configuration-snippet: set $workload_name "demo1";set
      $workloadId "7dkgjkx";set $orgId "7w2lnkp";set $partnerId "rx28oml";
    rafay.dev/cname: vijaytest-simha-dev-rafay-edge-net.Team Rafay
    rafay.dev/kubeVersionConstraint: <1.19.0
  name: vijaytest-qasimplified-com
  namespace: test-ns
spec:
  rules:
  - host: vijaytest.simha.dev.rafay-edge.net
    http:
      paths:
      - backend:
          serviceName: vijay-cont
          servicePort: 80
        path: /
  tls:
  - hosts:
    - vijaytest.simha.dev.rafay-edge.net
    secretName: 7dkgjkx-vijaytest--1411753543-ingress
